--- a/c2d2.md
+++ b/c2d2.md
@@ -74,4 +74,6 @@ transaction(myNewNumber: Int) {
 
 Verify that your number changed by running the script again.
 
+Script Result {"type":"Int","value":"5"}
+
 ![image](https://user-images.githubusercontent.com/104722876/166572180-334dd704-60af-4098-b9d5-aeb87c1b8e31.png)
