--- a/c2d3.md
+++ b/c2d3.md
@@ -37,3 +37,10 @@ because it was expecting a string and got a string?
 How to fix it
 
 the force unwrap operator !
+
+
+pub fun main(): String {
+ 	let thing: {Address: String} = {0x01: “One”, 0x02: “Two”, 0x03: “Three”}
+	return thing[0x03]!
+}
+
