--- a/c3d3.md
+++ b/c3d3.md
@@ -13,7 +13,7 @@ pub contract Quest {
     }
 
     pub fun getReference(key: String): &Goodbye {
-        return &self.dictionaryOfGreetings[key] as &Goodbye
+        return &self.dictionaryOfGoodbyes[key] as &Goodbye
     }
 
     init() {
