--- a/c3d3.md
+++ b/c3d3.md
@@ -38,5 +38,6 @@ pub fun main(): String {
 Explain, in your own words, why references can be useful in Cadence.
 
 
-We do not have to deal with optionals.  
+We do not have to deal with optionals.
+References can be used to get information without moving resources around, thus making references more easy to deal with  
 
