--- a/c3d5.md
+++ b/c3d5.md
@@ -61,7 +61,7 @@ access(all) contract SomeContract {
             // d =  read
             // publicFunc = access
             // contractFunc = access
-            // privateFunc = no access
+            // privateFunc = access
         }
 
         init() {
@@ -99,7 +99,7 @@ access(all) contract SomeContract {
             // a =  read/write
             // b =  read
             // c =  read
-            // d =  read
+            // d =  no read/write
             // publicFunc = access
             // contractFunc = access
             // privateFunc = no access
@@ -123,7 +123,7 @@ access(all) contract SomeContract {
         // a =  read/write
         // b = read
         // c = read
-        // d = read
+        // d = no read/write
         // publicFunc = access 
         // contractFunc = access
         // privateFunc = no access
