--- a/c4d2.md
+++ b/c4d2.md
@@ -48,7 +48,7 @@ transaction() {
     
     signer.save(<- Quest.createTest(), to: /storage/MyTestResource)
 
-    // only link `&Quest.Test{Quest.ITest}`, NOT `&Quest.Test`.
+    // only link `&Quest.Test{Quest.EYETest}`, NOT `&Quest.Test`.
     // Now the public only has access to the things in `Quest.EYETest`.
 
     signer.link<&Quest.Test{Quest.EYETest}>(/public/MyTestResource, target: /storage/MyTestResource)
@@ -103,4 +103,14 @@ pub fun main(address: Address): String {
 
   return testResource.name
 }
+
+
+![2022-05-11](https://user-images.githubusercontent.com/104722876/167921693-9ba3542d-abb3-4c97-bea8-b75839d026e8.png)
+
+![2022-05-11 (1)](https://user-images.githubusercontent.com/104722876/167921746-df417f8b-84af-449a-84fd-d15dc687edf8.png)
+
+![2022-05-11 (2)](https://user-images.githubusercontent.com/104722876/167921777-8260e31b-9c16-4a4d-a3f4-cecea2d70115.png)
+
+![2022-05-11 (3)](https://user-images.githubusercontent.com/104722876/167921826-55db0dce-c515-430c-8a9a-88d6810d5569.png)
+
 
