--- a/c4d3.md
+++ b/c4d3.md
@@ -9,7 +9,8 @@ each individual path a certain one was given
 
 What do you have to do if you have resources "nested" inside of another resource? ("Nested resources")
 
-any nested resources must be destroyed 
+any nested resources must be destroyed and we do this by using the
+destroy keyword 
 
 
 Brainstorm some extra things we may want to add to this contract. Think about what might be problematic with this contract and how we could fix it.
