--- a/c5d3.md
+++ b/c5d3.md
@@ -49,7 +49,9 @@ pub contract CryptoPoops: NonFungibleToken {
 
   }
 
-  pub resource Collection: NonFungibleToken.Provider, NonFungibleToken.Receiver, NonFungibleToken.CollectionPublic {
+// fixed the error from CollectionPublic to MyCollectionPublic
+
+  pub resource Collection: NonFungibleToken.Provider, NonFungibleToken.Receiver, NonFungibleToken.MyCollectionPublic {
     pub var ownedNFTs: @{UInt64: NonFungibleToken.NFT}
 
     pub fun withdraw(withdrawID: UInt64): @NonFungibleToken.NFT {
