--- a/c5d2.md
+++ b/c5d2.md
@@ -40,7 +40,7 @@ The implementing contract:
 
 import ITest from 0x01
 
-// must implement contract interface ITest in pub contractt Test
+// must implement contract interface ITest in pub contract Test
 
 pub contract Test: ITest {
   pub var number: Int
