--- a/c5d1.md
+++ b/c5d1.md
@@ -118,8 +118,8 @@ pub contract Test {
     init() {
       self.number = 0
 
-    // yes this function will log the updated number
-    // self.number = 1 
+    // no this function will not log the updated number
+    // result = 1 so post will fail and abort transaction 
     
     }
 
